--- a/WeedingEventManagment-WebApp/Views/Home/Index.cshtml
+++ b/WeedingEventManagment-WebApp/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@
         .hero {
             text-align: center;
             padding: 50px 20px;
-            background: url('Images/coupleee.png') no-repeat center center/cover;
+            background: url('/img/gall3.jpg') no-repeat center center/cover;
             color: white;
         }
 
@@ -136,17 +136,17 @@
             <div class="services">
                 <div class="services">
                     <div class="service">
-                        <img src="Images/f1.png" alt="Venue Decoration">
+                        <img src="/img/f1.png" alt="Venue Decoration">
                         <h3>Venue Decoration</h3>
                         <p>Elegant and breathtaking decorations tailored for your dream wedding.</p>
                     </div>
                     <div class="service">
-                        <img src="Images/f2.png" alt="Catering Services">
+                        <img src="/img/f2.png" alt="Catering Services">
                         <h3>Catering Services</h3>
                         <p>Delicious and diverse menu options to satisfy all your guests.</p>
                     </div>
                     <div class="service">
-                        <img src="Images/f3.png" alt="Photography & Videography">
+                        <img src="/img/f3.png" alt="Photography & Videography">
                         <h3>Photography & Videography</h3>
                         <p>Capture every special moment with professional photographers.</p>
                     </div>
